--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
             <li>
                 <img class="telecall-branco" src="imgs/telecall-branco.png" alt="">
             </li>
-            <li> <a href="#">Home</a></li>
+            <li> <a href="index.html">Home</a></li>
             <li> <a href="#">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
@@ -26,8 +26,7 @@
         </ul>
     </nav>
     <div id="idlogo">
-        <a href="#" target="_self">
-            <img class="logo" src="/imgs/telecall-logo-removebg-preview.png" alt="Logo"></a>
+            <img class="logo" src="/imgs/telecall-logo-removebg-preview.png" alt="Logo">
     </div>
 
     <form action="POST">
