--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <li>
                 <img class="telecall-branco" src="imgs/telecall-branco.png" alt="">
             </li>
-            <li> <a href="#">Home</a></li>
+            <li> <a href="index.html">Home</a></li>
             <li> <a href="#">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
