Nessa etapa preferir deixar algo mais com a cara da telecall e tirando o escuro da nav

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-branco" src="imgs/telecall-branco.png" alt="">
+                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#">Planos</a></li>
