--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internet - Telecall</title>
-    <link rel="stylesheet" href="/style/cadastro.css">
+    <link rel="stylesheet" href="/style/index.css">
     <link rel="icon" type="image/jpg" href="/imgs/icone.png">
 <body>
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-branco" src="imgs/telecall-branco.png" alt="">
+                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#">Planos</a></li>
@@ -21,6 +21,8 @@
             <li> <a href="cadastro.html" class="navcadastro">Cadastro</a></li>
         </ul>
     </nav>
-
+    <div class="bem-vindo">
+        <img src="/imgs/parteDaFrente.jpg" alt="" class="img-frontal">
+    </div>
 </body>
 </html>
