--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-branco" src="imgs/telecall-branco.png" alt="">
+                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#">Planos</a></li>
