adicionando a foto do inicio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </ul>
     </nav>
     <div class="bem-vindo">
-        <img src="/imgs/parteDaFrente.jpg" alt="" class="img-frontal">
+        <img src="/imgs/novaimg.png" alt="" class="img-frontal">
     </div>
+
 </body>
 </html>
