--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="bem-vindo">
-        <img src="/imgs/novaimg.png" alt="" class="img-frontal">
+        <img src="/imgs/novaimg2.png" alt="" class="img-frontal">
     </div>
 
 </body>
