--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
         </ul>
     </nav>
     <div class="bem-vindo">
-        <img src="/imgs/novaimg2.png" alt="" class="img-frontal">
+        <img class="img-frontal"  src="/imgs/novaimg2.png" alt="" >
     </div>
+    <section>
+        <h1 class="plano-h1">Conheça nossos planos de telecomunicação para ficar sempre conectado</h1>
+        <img src="/imgs/100mega.png" alt="">
+        <img src="/imgs/200mega.png" alt="">
+        <img src="/imgs/300mega.png" alt="">
 
+    </section>
 </body>
-</html>
+</html> 
