--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Internet - Telecall</title>
     <link rel="stylesheet" href="/style/index.css">
     <link rel="icon" type="image/jpg" href="/imgs/icone.png">
+
 <body>
     <nav id="menu">
         <ul>
@@ -14,7 +16,7 @@
                 <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="#">Planos</a></li>
+            <li> <a href="#planos">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
@@ -22,14 +24,30 @@
         </ul>
     </nav>
     <div class="bem-vindo">
-        <img class="img-frontal" src="/imgs/novaimg2.png" alt="" >
+        <img class="img-frontal" src="/imgs/novaimg2.png" alt="">
     </div>
-    <section>
+    <section id="planos">
         <h1>Conheça nossos planos de telecomunicação para ficar sempre conectado:</h1>
-        <img src="/imgs/100mega.png" alt="">
-        <img src="/imgs/200mega.png" alt="">
-        <img src="/imgs/300mega.png" alt="">
+        <div>
+            <img src="/imgs/100mega.png" alt="">
+            <a href="#">
+                <p class="mega100p">ASSINE JÁ</p>
+            </a>
+        </div>
+        <div>
+            <img src="/imgs/200mega.png" alt="">
+            <a href="#">
+                <p class="mega200p">ASSINE JÁ</p>
+            </a>
+        </div>
+        <div>
+            <img src="/imgs/300mega.png" alt="">
+            <a href="#">
+                <p class="mega300p">ASSINE JÁ</p>
+            </a>
+        </div>
 
     </section>
 </body>
-</html> 
+
+</html>
