--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
                 <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png">
             </li>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="#">Planos</a></li>
+            <li> <a href="index.html#planos">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
