--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="#planos">Planos</a></li>
+            <li> <a href="index.html#planos">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
@@ -46,8 +46,9 @@
                 <p class="mega300p">ASSINE JÁ</p>
             </a>
         </div>
-
     </section>
+
+    <section></section>
 </body>
 
 </html>
