--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="index.html#planos">Planos</a></li>
+            <li> <a href="#planos">Planos</a></li>
             <li> <a href="#">Sobre nós</a></li>
             <li> <a href="#">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
@@ -27,7 +27,7 @@
         <img class="img-frontal" src="/imgs/novaimg2.png" alt="">
     </div>
     <section id="planos">
-        <h1>Conheça nossos planos de telecomunicação para ficar sempre conectado:</h1>
+        <h1>Conheça nossos planos de telecomunicação para se manter conectado. Oferecemos planos de internet e telefone confiáveis e acessíveis para atender às suas necessidades de comunicação:</h1>
         <div>
             <img src="/imgs/100mega.png" alt="">
             <a href="#">
@@ -47,8 +47,9 @@
             </a>
         </div>
     </section>
-
-    <section></section>
+    <section id="sobre-nos">
+        <h3>Quem Somos</h3>
+    </section>
 </body>
 
 </html>
