feito a parte do Quem Somos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#planos">Planos</a></li>
-            <li> <a href="#">Sobre nós</a></li>
+            <li> <a href="#quem-somos">Quem Somos</a></li>
             <li> <a href="#">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
             <li> <a href="cadastro.html" class="navcadastro">Cadastro</a></li>
@@ -27,7 +27,8 @@
         <img class="img-frontal" src="/imgs/novaimg2.png" alt="">
     </div>
     <section id="planos">
-        <h1>Conheça nossos planos de telecomunicação para se manter conectado. Oferecemos planos de internet e telefone confiáveis e acessíveis para atender às suas necessidades de comunicação:</h1>
+        <h1>Conheça nossos planos de telecomunicação para se manter conectado. Oferecemos planos de internet e telefone
+            confiáveis e acessíveis para atender às suas necessidades de comunicação:</h1>
         <div>
             <img src="/imgs/100mega.png" alt="">
             <a href="#">
@@ -47,8 +48,20 @@
             </a>
         </div>
     </section>
-    <section id="sobre-nos">
-        <h3>Quem Somos</h3>
+    <section id="quem-somos">
+
+        <div id="sobre-alinhado">
+            <h1>Quem Somos:</h1>
+            <pre>            A Telecall é uma operadora de telecomunicações brasileira 
+            que oferece a seus clientes o mais alto padrão de qualidade,
+            velocidade e acessibilidade em soluções de comunicação. 
+            Serviços que incluem uma ampla gama de valores 
+            agregados, oferecendo aos clientes operações mais 
+            produtivas, inovadoras e eficazes. Com mais de 20 anos de 
+            experiência na indústria global, a Telecall hoje é sinônimo de 
+            qualidade e eficiência.
+        </pre>
+        </div>
     </section>
 </body>
 
