Atualizando secao de contato

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
         </pre>
         </div>
     </section>
+    <section id="contato">
+      
+        <img class="logo-branco" src="/imgs/telecall-branco.png" alt="">
+        <a href="https://www.facebook.com/TelecallBr" target="_blank">
+         <img class="logo-link" src="/imgs/facebook.png" alt="">
+        </a>
+        <a href="https://www.instagram.com/telecallbr/" target="_blank">
+         <img class="logo-link" src="/imgs/instagram.png" alt="">
+        </a>
+        <a href="https://www.linkedin.com/company/telecall/" target="_blank">
+        <img class="logo-link" src="/imgs/linkedin.png" alt="">
+        </a>
+        <hr>
+    </section>
 </body>
 
 </html>
