--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#planos">Planos</a></li>
             <li> <a href="#quem-somos">Quem Somos</a></li>
-            <li> <a href="#">Contato</a></li>
+            <li> <a href="#contato">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
             <li> <a href="cadastro.html" class="navcadastro">Cadastro</a></li>
         </ul>
@@ -64,18 +64,29 @@
         </div>
     </section>
     <section id="contato">
-      
+
         <img class="logo-branco" src="/imgs/telecall-branco.png" alt="">
         <a href="https://www.facebook.com/TelecallBr" target="_blank">
-         <img class="logo-link" src="/imgs/facebook.png" alt="">
+            <img class="logo-link" src="/imgs/facebook.png" alt="">
         </a>
         <a href="https://www.instagram.com/telecallbr/" target="_blank">
-         <img class="logo-link" src="/imgs/instagram.png" alt="">
+            <img class="logo-link" src="/imgs/instagram.png" alt="">
         </a>
         <a href="https://www.linkedin.com/company/telecall/" target="_blank">
-        <img class="logo-link" src="/imgs/linkedin.png" alt="">
+            <img class="logo-link" src="/imgs/linkedin.png" alt="">
         </a>
         <hr>
+        <h1>CONTATOS</h1>
+        <pre>
+            Email: suporte@telecall.com                     
+            Tel: (21) 3030-1010
+            Wpp: (21)93618-0100
+        </pre>
+        <pre>
+            Para qualquer informação, dúvida ou comentário:
+            (21) 3030-1010
+            0800 030 2016
+        </pre>
     </section>
 </body>
 
