--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <li> <a href="index.html">Home</a></li>
             <li> <a href="index.html#planos">Planos</a></li>
             <li> <a href="index.html#quem-somos">Quem Somos</a></li>
-            <li> <a href="#">Contato</a></li>
+            <li> <a href="index.html#contato">Contato</a></li>
             <li> <a href="login.html" class="navlogin">Entrar</a></li>
             <li> <a href="cadastro.html" class="navcadastro">Cadastro</a></li>
         </ul>
