Retirando toda barra das imagens

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internet - Telecall</title>
-    <link rel="stylesheet" href="/style/index.css">
-    <link rel="icon" type="image/jpg" href="/imgs/icone.png">
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="icon" type="image/jpg" href="imgs/icone.png">
 
 <body>
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
+                <img class="telecall-logo" src="imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#planos">Planos</a></li>
@@ -24,25 +24,25 @@
         </ul>
     </nav>
     <div class="bem-vindo">
-        <img class="img-frontal" src="/imgs/novaimg2.png" alt="">
+        <img class="img-frontal" src="imgs/novaimg2.png" alt="">
     </div>
     <section id="planos">
         <h1>Conheça nossos planos de telecomunicação para se manter conectado. Oferecemos planos de internet e telefone
             confiáveis e acessíveis para atender às suas necessidades de comunicação:</h1>
         <div>
-            <img src="/imgs/100mega.png" alt="">
+            <img src="imgs/100mega.png" alt="">
             <a href="#">
                 <p class="mega100p">ASSINE JÁ</p>
             </a>
         </div>
         <div>
-            <img src="/imgs/200mega.png" alt="">
+            <img src="imgs/200mega.png" alt="">
             <a href="#">
                 <p class="mega200p">ASSINE JÁ</p>
             </a>
         </div>
         <div>
-            <img src="/imgs/300mega.png" alt="">
+            <img src="imgs/300mega.png" alt="">
             <a href="#">
                 <p class="mega300p">ASSINE JÁ</p>
             </a>
@@ -65,15 +65,15 @@
     </section>
     <section id="contato">
 
-        <img class="logo-branco" src="/imgs/telecall-branco.png" alt="">
+        <img class="logo-branco" src="imgs/telecall-branco.png" alt="">
         <a href="https://www.facebook.com/TelecallBr" target="_blank">
-            <img class="logo-link" src="/imgs/facebook.png" alt="">
+            <img class="logo-link" src="imgs/facebook.png" alt="">
         </a>
         <a href="https://www.instagram.com/telecallbr/" target="_blank">
-            <img class="logo-link" src="/imgs/instagram.png" alt="">
+            <img class="logo-link" src="imgs/instagram.png" alt="">
         </a>
         <a href="https://www.linkedin.com/company/telecall/" target="_blank">
-            <img class="logo-link" src="/imgs/linkedin.png" alt="">
+            <img class="logo-link" src="imgs/linkedin.png" alt="">
         </a>
         <hr>
         <h1>CONTATOS</h1>
