--- a/cadastro.html
+++ b/cadastro.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Telecall</title>
-    <link rel="stylesheet" href="/style/cadastro.css">
-    <link rel="icon" type="image/jpg" href="/imgs/icone.png">
+    <link rel="stylesheet" href="style/cadastro.css">
+    <link rel="icon" type="image/jpg" href="imgs/icone.png">
 
 </head>
 
@@ -15,7 +15,7 @@
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png">
+                <img class="telecall-logo" src="imgs/telecall-logo-removebg-preview.png">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="index.html#planos">Planos</a></li>
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <div id="idlogo">
-            <img class="logo" src="/imgs/telecall-logo-removebg-preview.png" alt="Logo">
+            <img class="logo" src="imgs/telecall-logo-removebg-preview.png" alt="Logo">
     </div>
 
     <form action="POST">
