--- a/login.html
+++ b/login.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do cliente - Telecall</title>
-    <link rel="stylesheet" href="/style/login.css">
-    <link rel="icon" type="image/jpg" href="/imgs/icone.png">
+    <link rel="stylesheet" href="style/login.css">
+    <link rel="icon" type="image/jpg" href="imgs/icone.png">
 </head>
 
 <body>
     <nav id="menu">
         <ul>
             <li>
-                <img class="telecall-logo" src="/imgs/telecall-logo-removebg-preview.png" alt="">
+                <img class="telecall-logo" src="imgs/telecall-logo-removebg-preview.png" alt="">
             </li>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="index.html#planos">Planos</a></li>
@@ -27,7 +27,7 @@
 
     <div id="idlogo">
         <a href="#" target="_self">
-            <img class="logo" src="/imgs/telecall-logo-removebg-preview.png" alt="Logo"></a>
+            <img class="logo" src="imgs/telecall-logo-removebg-preview.png" alt="Logo"></a>
     </div>
 
     <form action="POST">
